--- a/public/template/home.html
+++ b/public/template/home.html
@@ -1,22 +1,49 @@
+<h3>Demo:</h3>
+<br>
 <div context-menu="onRightClick(message);" class="panel panel-default" data-target="myMenu"
-     ng-class="{ 'highlight': highlight, 'expanded' : expanded }">
+     ng-class="{ 'highlight': panel1.highlight, 'expanded': panel1.expanded }">
   <div class="panel-body">
-    Right-click anywhere within this panel
+    <strong>Panel 1</strong> (Right-click anywhere within this panel)
+  </div>
+</div>
+<div context-menu="onRightClick(message);" class="panel panel-default" data-target="myMenu2"
+     ng-class="{ 'highlight': panel2.highlight, 'expanded': panel2.expanded }">
+  <div class="panel-body">
+    <strong>Panel 2</strong> (Right-click anywhere within this panel)
   </div>
 </div>
 <div class="dropdown position-fixed" id="myMenu">
   <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
     <li role="presentation">
-      <a class="pointer" role="menuitem" tabindex="-1" ng-click="highlight = true">Select</a>
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel1.highlight = true">Select Panel 1</a>
     </li>
     <li role="presentation">
-      <a class="pointer" role="menuitem" tabindex="-1" ng-click="highlight = false">Deselect</a>
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel1.highlight = false">Deselect Panel 1</a>
     </li>
     <li role="presentation">
-      <a class="pointer" role="menuitem" tabindex="-1" ng-click="expanded = true">Expand</a>
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel1.expanded = true">Expand Panel 1</a>
     </li>
     <li role="presentation">
-      <a class="pointer" role="menuitem" tabindex="-1" ng-click="expanded = false">Contract</a>
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel1.expanded = false">Contract Panel 1</a>
+    </li>
+    <li role="presentation">
+      <a href="https://github.com/ianwalter/ng-context-menu" role="menuitem" tabindex="-1">ng-context-menu on GitHub</a>
+    </li>
+  </ul>
+</div>
+<div class="dropdown position-fixed" id="myMenu2">
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+    <li role="presentation">
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel2.highlight = true">Select Panel 2</a>
+    </li>
+    <li role="presentation">
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel2.highlight = false">Deselect Panel 2</a>
+    </li>
+    <li role="presentation">
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel2.expanded = true">Expand Panel 2</a>
+    </li>
+    <li role="presentation">
+      <a class="pointer" role="menuitem" tabindex="-1" ng-click="panel2.expanded = false">Contract Panel 2</a>
     </li>
     <li role="presentation">
       <a href="https://github.com/ianwalter/ng-context-menu" role="menuitem" tabindex="-1">ng-context-menu on GitHub</a>
