--- a/public/template/home.html
+++ b/public/template/home.html
@@ -1,14 +1,33 @@
 <h3>Demo:</h3>
 <br>
-<div context-menu="onRightClick(message);" class="panel panel-default" data-target="myMenu"
-     ng-class="{ 'highlight': panel1.highlight, 'expanded': panel1.expanded }">
-  <div class="panel-body">
-    <strong>Panel 1</strong> (Right-click anywhere within this panel)
+<div ng-repeat="panel in panels">
+  <div context-menu="onRightClick(message);" class="panel panel-default" data-target="myMenu{{ $index }}"
+       ng-class="{ 'highlight': panel.highlight, 'expanded': panel.expanded }">
+    <div class="panel-body">
+      <strong ng-bind="panel.name"></strong> (Right-click anywhere within this panel)
+    </div>
+  </div>
+  <div class="dropdown position-fixed" id="myMenu{{ $index }}">
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+      <li>
+        <a class="pointer" role="menuitem" tabindex="1" ng-click="panel.highlight = true">Select Panel {{ $index + 1 }}</a>
+      </li>
+      <li>
+        <a class="pointer" role="menuitem" tabindex="2" ng-click="panel.highlight = false">Deselect Panel  {{ $index + 1 }}</a>
+      </li>
+      <li>
+        <a class="pointer" role="menuitem" tabindex="3" ng-click="panel.expanded = true">Expand Panel {{ $index + 1 }}</a>
+      </li>
+      <li>
+        <a class="pointer" role="menuitem" tabindex="4" ng-click="panel.expanded = false">Contract Panel {{ $index + 1 }}</a>
+      </li>
+      <li>
+        <a class="pointer" role="menuitem" tabindex="5" ng-click="addPanel()">Add a panel</a>
+      </li>
+      <li>
+        <a href="https://github.com/ianwalter/ng-context-menu" role="menuitem" tabindex="-1">ng-context-menu on GitHub</a>
+      </li>
+    </ul>
   </div>
 </div>
-<div context-menu="onRightClick(message);" class="panel panel-default" data-target="myMenu2"
-     ng-class="{ 'highlight': panel2.highlight, 'expanded': panel2.expanded }">
-  <div class="panel-body">
-    <strong>Panel 2</strong> (Right-click anywhere within this panel)
-  </div>
-</div>
+<button class="btn btn-default" ng-click="recreatePanels()">Recreate Panels</button>
