--- a/public/template/home.html
+++ b/public/template/home.html
@@ -1,16 +1,18 @@
 <h3>Demo:</h3>
 <br>
 <div ng-repeat="panel in panels">
-  <div context-menu="onRightClick(message);" class="panel panel-default"
-       data-target="myMenu{{ $index }}"
+  <div context-menu="onRightClick(message)"
+       id="panel-{{ $index }}"
+       class="panel panel-default"
+       data-target="menu-{{ $index }}"
        ng-class="{ 'highlight': panel.highlight, 'expanded': panel.expanded }">
     <div class="panel-body">
       <strong ng-bind="panel.name"></strong>
       (Right-click anywhere within this panel)
     </div>
   </div>
-  <div class="dropdown position-fixed" id="myMenu{{ $index }}">
-    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+  <div class="dropdown position-fixed" id="menu-{{ $index }}">
+    <ul class="dropdown-menu" role="menu">
       <li>
         <a class="pointer" role="menuitem" tabindex="1"
            ng-click="panel.highlight = true">Select Panel {{ $index + 1 }}</a>
