Add callback for when the context menu is closed

--- a/public/template/home.html
+++ b/public/template/home.html
@@ -2,6 +2,7 @@
 <br>
 <div ng-repeat="panel in panels">
   <div context-menu="onRightClick(message)"
+       context-menu-close="onClose(closeMessage)"
        id="panel-{{ $index }}"
        class="panel panel-default"
        data-target="menu-{{ $index }}"
